<resources>
    <string name="app_name">Night Out</string>

    <!-- Header Names -->
    <string name="login">Login/Logout of Night Out</string>
    <string name="current_reservations">Current Reservations</string>
    <string name="reservation_details">Reservation Details</string>
    <string name="reservation">Make a Reservation</string>
    <string name="current_invoices">Current Invoices</string>
    <string name="invoice_details">Invoice Details</string>
    <string name="restaurant">Restaurant</string>
    <!-- Main -->
    <string name="btn_search_restaurants">Search For Places</string>
    <string name="btn_view_reservations">View Current Reservations</string>
    <string name="btn_login">Login/Logout</string>
    <string name="btn_view_invoices">View Invoices</string>
    <!-- Login -->
    <string name="btn_login_facebook">Login With Facebook</string>
    <string name="btn_logout_facebook">Sign Out of Facebook</string>
    <string name="btn_login_google">Login With Google</string>
    <string name="btn_logout_google">Sign Out of Google</string>
    <!-- Map Search -->
    <string name="title_activity_maps">Map</string>
    <string name="btn_search">Search</string>
    <string name="btn_restaurants">Nearby Restaurants</string>
    <string name="showing_restaurants">Showing Nearby Restaurants</string>
    <!-- Reservations-->
    <string name="text_view_date">MM/DD/YYYY</string>
    <string name="text_view_location">123 Easy Street Anytown USA</string>
    <string name="text_view_time">11:00 AM</string>
    <string name="text_view_restaurant_date">Date</string>
    <string name="text_view_restaurant_time">Time</string>
    <string name="btn_confirm_reservation">Confirm Reservation</string>
    <string name="btn_add_reservaton_to_cal">Add Reservation To Calendar</string>
    <!-- Invoices -->
    <string name="text_view_invoice_total">Total</string>
    <string name="text_view_invoice_date">Date</string>
    <string name="btn_pay_with_paypal">Pay With Paypal</string>
    <string name="title_activity_maps2">Map</string>
    <!-- Restaurant Details -->
    <string name="btn_reserve">Make a Reservation</string>
    <string name="facebook_app_id">1937944086292576</string>
    <string name="fb_login_protocol_scheme">fb1937944086292576</string>
    <string name="text_phone">Phone:</string>
    <string name="text_website">Website:</string>
    <string name="text_price">Price:</string>
    <string name="text_rating">Rating:</string>
    <string name="text_default">N/A</string>

</resources>
