<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="369dp"
        android:layout_height="135dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="187dp"
            android:layout_height="133dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/android_calendar" />

        <LinearLayout
            android:layout_width="217dp"
            android:layout_height="133dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_date" />

            <TextView
                android:id="@+id/textViewLcoation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_location" />

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_time" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>